* Aug 30 2001 hship

doc:
- More improvements to Designer's Guide, including UML diagrams

* Aug 28 2001 hship

- Don't build or ship the junit code

framework:
- Add IComponent.getBindings()
- Rename registerForEvents() to the more generic, finishLoad()
- Add Default helper bean
- Cleanup a number of Javadoc errors
- Reorganize IForm vs. Form (moving key methods to the IForm interface)
- Change IFormComponent to expose an IForm property (not a Form property)

contrib:
- Change the Palette component to use the new Default helper bean

vlib:
- Rename registerForEvents() to the more generic, finishLoad()

doc:
- Rename registerForEvents() to the more generic, finishLoad()

tutorial:
- Made use of ValidationDelegate and Default helper beans in the valid tutorial

* Aug 27 2001 hship

vlibbeans:
- Implement locked-out functionality
- Implement Book.dateAdded and Person.lastAccess

vlib:
- Look and feel improvements
- Visually identify new books (where Book.dateAdded >= Person.lastAccess, for the logged in user)

* Aug 27 2001 hship

doc:
- Get the Developer's Guide up-to date with respect to yesterday's
  changes

* Aug 26 2001 hship

framework:
- Add initial support for configuring properties of helper beans
- Add <set-property>, <static-value> and <property-value> to the
  Tapestry 1.1 DTD
- Change the Inspector's ShowLogging view to use an initialized
  helper bean

* Aug 26 2001 hship

framework:
- Remove ILifecycle interface, related methods on IPage and elsewhere
- Add new event listener methods on IPage (to replace ILifecycle) with
  finer granularity
- Convert components from ILifecycle to PageRenderListener, PageDetachListener, etc.

vlib:
- Convert Browser from ILifecycle to PageDetachListener

documentation:
- Describe helper beans, and the <bean> and <reserved-parameter>
  elements of the component specification.
  
* Aug 24 2001 hship

framework:
- Improve toString() in a few classes
- Add <reserved-parameter> element to component specification